--- a/reliable-business-manager/src/main/resources/bootstrap.yml
+++ b/reliable-business-manager/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ server:
 eureka:
   instance:
     prefer-ip-address: true #开启ip注册 
-    ip-address: lcoalhsot #47.92.98.17
+    ip-address: 47.92.98.17
        #设置注册的ip [默认获取第一个非回环IP地址,阿里云获取到内网ip] 
   client:
     service-url:
@@ -13,7 +13,7 @@ spring:
     name: reliable-avtivity-info-manager
   cloud:
     config:
-      name: rabbitmq-bus,async-thread,logback-web-debug,mysql-8 #此处指定多个文件名即可
+      name: rabbitmq-bus,async-thread,logback-web-debug,feign #此处指定多个文件名即可
       profile: dev
       label: master
       discovery:
