--- a/reliable-activity-info-manager/src/main/resources/bootstrap.yml
+++ b/reliable-activity-info-manager/src/main/resources/bootstrap.yml
@@ -3,11 +3,10 @@ server:
 eureka:
   instance:
     prefer-ip-address: true #开启ip注册 
-    ip-address: lcoalhsot #47.92.98.17
-       #设置注册的ip [默认获取第一个非回环IP地址,阿里云获取到内网ip] 
+    ip-address: 47.104.89.2
   client:
     service-url:
-      defaultZone: http://47.92.98.17:8000/eureka/
+      defaultZone: http://47.104.89.2:8000/eureka/
 spring:
   application:
     name: reliable-avtivity-info-manager
