--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 reliable-actid-manager/reliable-logs/spring.log
 reliable-activity-info-manager/reliable-logs/spring.log
+reliable-business-manager/reliable-logs/spring.log
+*.log
+*.gz
