--- a/reliable-data-center/src/main/resources/bootstrap.yml
+++ b/reliable-data-center/src/main/resources/bootstrap.yml
@@ -3,8 +3,8 @@ server:
 eureka:
   instance:
     prefer-ip-address: true #开启ip注册
-    ip-address: localhost
-    #ip-address: 47.104.72.15
+    #ip-address: localhost
+    ip-address: 47.104.72.15
        #设置注册的ip [默认获取第一个非回环IP地址,阿里云获取到内网ip] 
   client:
     service-url:
