--- a/reliable-activityinfo-manager/src/main/resources/bootstrap.yml
+++ b/reliable-activityinfo-manager/src/main/resources/bootstrap.yml
@@ -3,8 +3,8 @@ server:
 eureka:
   instance:
     prefer-ip-address: true 
-    #ip-address: 47.104.72.15
-    ip-address: localhost
+    ip-address: 47.104.72.15
+    #ip-address: localhost
   client:
     service-url:
       defaultZone: http://47.92.98.17:8000/eureka/
