--- a/reliable-refund-request-manager/pom.xml
+++ b/reliable-refund-request-manager/pom.xml
@@ -8,8 +8,8 @@
 		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>org.xarch</groupId>
+	<artifactId>reliable-refund-requset-manager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>reliable-refund-requset-manager</name>
 	<description>退款</description>
@@ -111,6 +111,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<!-- package 跳过test单元测试 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
