--- a/reliable-refund-request-manager/pom.xml
+++ b/reliable-refund-request-manager/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>org.xarch</groupId>
 	<artifactId>reliable-refund-request-manager</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>reliable-refund-request-manager</name>
 	<description>退款</description>
 
