--- a/reliable-order-request-manager/pom.xml
+++ b/reliable-order-request-manager/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>org.xarch</groupId>
 	<artifactId>reliable-order-request-manager</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>reliable-order-request-manager</name>
 	<description>storage wx_pay order request into the redis </description>
 
