--- a/reliable-refund-response-manager/pom.xml
+++ b/reliable-refund-response-manager/pom.xml
@@ -101,7 +101,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<!-- package 跳过test单元测试 -->
+			<!-- package 跳过<test单元测试> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
