--- a/reliable-business-manager/src/main/resources/bootstrap.yml
+++ b/reliable-business-manager/src/main/resources/bootstrap.yml
@@ -4,6 +4,7 @@ eureka:
   instance:
     prefer-ip-address: true #开启ip注册 
     ip-address: 47.92.98.17
+    #ip-address: localhost
        #设置注册的ip [默认获取第一个非回环IP地址,阿里云获取到内网ip] 
   client:
     service-url:
