--- a/reliable-bill-manager/src/main/resources/bootstrap.yml
+++ b/reliable-bill-manager/src/main/resources/bootstrap.yml
@@ -10,7 +10,7 @@ eureka:
       defaultZone: http://47.92.98.17:8000/eureka/
 spring:
   application:
-    name: reliable-draft-manager
+    name: reliable-bill-manager
   cloud:
     config:
       name: rabbitmq-bus,async-thread,logback-web-debug,feign,ribbon-eager-load-business,redis-15-bill
